tests/baselines/reference/FunctionPropertyAssignments2_es6.errors.txt
//// [tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments2_es6.ts] ////

FunctionPropertyAssignments2_es6.ts(1,12): error TS1003: Identifier expected.


==== FunctionPropertyAssignments2_es6.ts (1 errors) ====
    var v = { *() { } }
               ~
!!! error TS1003: Identifier expected.